tests/ui/type-alias-impl-trait/issue-52843-closure-constrain.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/issue-52843-closure-constrain.rs:13:31
   |
LL |     let null = || -> Opaque { 0 };
   |                               ^ expected `String`, got `i32`
   |
note: previous use here
  --> $DIR/issue-52843-closure-constrain.rs:11:9
   |
LL |         String::new()
   |         ^^^^^^^^^^^^^

error: aborting due to previous error

